[project]
name = "wm-daemons"
version = "0.1.0"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
license = "BSD"
description = """
Daemons to handle the modern D-Bus service desktop.
"""

[dependencies]
clap = "~1.2.0"
#config = "0.1.1"
xdg-basedir = "~0.2.0"

[dependencies.config]
git = "https://github.com/filipegoncalves/rust-config.git"

[lib]
name = "wm_daemons"
path = "src/lib.rs"
