[project]
name = "wm-daemons"
version = "0.1.0"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
license = "BSD-3-Clause"
description = """
Daemons to handle the modern D-Bus service desktop.
"""

[dependencies]
clap = "~1.2.0"
config = "~0.1.2"
xdg-basedir = "~0.2.0"

[lib]
name = "wm_daemons"
path = "src/lib.rs"
